# libhybris

./: .gitignore
android-p/: git-revisions.txt  manifest.xml
android-p/cutils/: atomic.h
hybris/: .autotools  .cproject  .project  Makefile.am  configure.ac
hybris/binder/: Binder.cpp  IMemory.cpp  IServiceManager.cpp  Makefile.am  Parcel.cpp  binder.pc.in
hybris/binder/libcutils/: Makefile.am  ashmem-dev.cpp  cutils.pc.in
hybris/binder/libutils/: Makefile.am  android_log.cpp  misc.cpp  utils.pc.in
hybris/common/: Makefile.am  hooks.c
hybris/common/jb/: linker.c
hybris/common/p/: Makefile.am  dlfcn.cpp  linked_list.h  linker.cpp  linker.h  linker_block_allocator.cpp  linker_block_allocator.h  linker_cfi.cpp  linker_cfi.h  linker_common_types.h  linker_config.cpp  linker_config.h  linker_debug.h  linker_dlwarning.cpp  linker_gdb_support.cpp  linker_globals.cpp  linker_globals.h  linker_logger.cpp  linker_logger.h  linker_main.cpp  linker_main.h  linker_mapped_file_fragment.h  linker_namespaces.cpp  linker_phdr.cpp  linker_sdk_versions.cpp  linker_soinfo.cpp  linker_utils.cpp  linker_utils.h  rt.cpp
hybris/common/p/codebase/bionic/libc/async_safe/: log.h
hybris/common/p/codebase/bionic/libc/bionic/: pthread_internal.h
hybris/common/p/codebase/bionic/libc/private/: bionic_futex.h  thread_private.h
hybris/common/p/codebase/system/core/base/: file.cpp
hybris/common/p/codebase/system/core/base/include/android-base/: properties.h
hybris/common/p/compat/: ScopedTrace.cpp  async_safe_log.cpp  hybris_compat.h  stringl.c
hybris/common/p/compat/arc4random/: arc4random.c  arc4random_uniform.c  bionic_arc4random.cpp  chacha_private.h  getentropy.cpp  thread_private.cpp
hybris/include/android/autogen/android/hardware/graphics/bufferqueue/1.0/: BnHwGraphicBufferProducer.h  BnHwProducerListener.h  BpHwGraphicBufferProducer.h  BpHwProducerListener.h  BsGraphicBufferProducer.h  BsProducerListener.h  IGraphicBufferProducer.h  IHwGraphicBufferProducer.h  IHwProducerListener.h  IProducerListener.h
hybris/include/android/autogen/android/hardware/graphics/common/1.0/: hwtypes.h  types.h
hybris/include/android/autogen/android/hardware/graphics/common/1.1/: hwtypes.h  types.h
hybris/include/android/autogen/android/hardware/media/1.0/: hwtypes.h  types.h
hybris/include/android/autogen/android/hidl/base/1.0/: BnHwBase.h  BpHwBase.h  BsBase.h  IBase.h  IHwBase.h  hwtypes.h  types.h
hybris/include/android/autogen/android/hidl/manager/1.0/: BnHwServiceManager.h  BnHwServiceNotification.h  BpHwServiceManager.h  BpHwServiceNotification.h  BsServiceManager.h  BsServiceNotification.h  IHwServiceManager.h  IHwServiceNotification.h  IServiceManager.h  IServiceNotification.h
hybris/include/android/frameworks/native/libs/binder/include/binder/: Parcel.h
hybris/include/android/frameworks/native/libs/binder/include/linux/android/: binder.h
hybris/include/android/frameworks/native/libs/binder/include/private/binder/: binder_module.h
hybris/include/android/frameworks/native/libs/gui/include/gui/: BufferHubConsumer.h  BufferHubProducer.h  BufferItem.h  BufferItemConsumer.h  BufferQueue.h  BufferQueueConsumer.h  BufferQueueCore.h  BufferQueueDefs.h  BufferQueueProducer.h  BufferSlot.h  ConsumerBase.h  CpuConsumer.h  DisplayEventReceiver.h  FrameTimestamps.h  GLConsumer.h  GuiConfig.h  HdrMetadata.h  IConsumerListener.h  IDisplayEventConnection.h  IGraphicBufferConsumer.h  IGraphicBufferProducer.h  IProducerListener.h  ISurfaceComposer.h  ISurfaceComposerClient.h  LayerDebugInfo.h  LayerState.h  OccupancyTracker.h  StreamSplitter.h  Surface.h  SurfaceComposerClient.h  SurfaceControl.h
hybris/include/android/frameworks/native/libs/gui/include/gui/bufferqueue/1.0/: B2HProducerListener.h  H2BGraphicBufferProducer.h
hybris/include/android/frameworks/native/libs/gui/include/gui/view/: Surface.h
hybris/include/android/frameworks/native/libs/math/include/math/: TMatHelpers.h  TQuatHelpers.h  half.h  mat2.h  mat3.h  mat4.h  quat.h  vec2.h  vec3.h  vec4.h
hybris/include/android/system/core/libbacktrace/include/backtrace/: Backtrace.h
hybris/include/android/system/core/libutils/include/utils/: StrongPointer.h  VectorImpl.h
hybris/include/android/system/libhidl/base/include/hidl/: HidlSupport.h  MQDescriptor.h  Status.h
hybris/include/android/system/libhidl/transport/token/1.0/utils/include/hidl/: HybridInterface.h
hybris/tests/: Makefile.am  test_binder.cpp  test_glesv2.c  test_p.c  test_p.cpp
hybris/tests-android/: .cproject  .project  AndroidCommon.cmake  CMakeLists.txt  test-main.c  test-simple.c
